creating entities, messages and ports to list scheduler and game rooms infortmations
