# pkg/api/v1/messages.pb.go
@@ -1045,6 +1045,109 @@ func (x *ForwarderOptions) GetMetadata() *_struct.Struct {
 	return nil
 }
 
+// Scheduler Info
+type SchedulerInfo struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// Name
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	// Game
+	Game string `protobuf:"bytes,2,opt,name=game,proto3" json:"game,omitempty"`
+	// State
+	State string `protobuf:"bytes,3,opt,name=state,proto3" json:"state,omitempty"`
+	// Rooms ready
+	RoomsReady int64 `protobuf:"varint,4,opt,name=rooms_ready,json=roomsReady,proto3" json:"rooms_ready,omitempty"`
+	// Rooms Occupied
+	RoomsOccupied int64 `protobuf:"varint,5,opt,name=rooms_occupied,json=roomsOccupied,proto3" json:"rooms_occupied,omitempty"`
+	// Rooms Creating
+	RoomsCreating int64 `protobuf:"varint,6,opt,name=rooms_creating,json=roomsCreating,proto3" json:"rooms_creating,omitempty"`
+	// Rooms Terminating
+	RoomsTerminating int64 `protobuf:"varint,7,opt,name=rooms_terminating,json=roomsTerminating,proto3" json:"rooms_terminating,omitempty"`
+}
+
+func (x *SchedulerInfo) Reset() {
+	*x = SchedulerInfo{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_v1_messages_proto_msgTypes[13]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SchedulerInfo) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SchedulerInfo) ProtoMessage() {}
+
+func (x *SchedulerInfo) ProtoReflect() protoreflect.Message {
+	mi := &file_api_v1_messages_proto_msgTypes[13]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SchedulerInfo.ProtoReflect.Descriptor instead.
+func (*SchedulerInfo) Descriptor() ([]byte, []int) {
+	return file_api_v1_messages_proto_rawDescGZIP(), []int{13}
+}
+
+func (x *SchedulerInfo) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *SchedulerInfo) GetGame() string {
+	if x != nil {
+		return x.Game
+	}
+	return ""
+}
+
+func (x *SchedulerInfo) GetState() string {
+	if x != nil {
+		return x.State
+	}
+	return ""
+}
+
+func (x *SchedulerInfo) GetRoomsReady() int64 {
+	if x != nil {
+		return x.RoomsReady
+	}
+	return 0
+}
+
+func (x *SchedulerInfo) GetRoomsOccupied() int64 {
+	if x != nil {
+		return x.RoomsOccupied
+	}
+	return 0
+}
+
+func (x *SchedulerInfo) GetRoomsCreating() int64 {
+	if x != nil {
+		return x.RoomsCreating
+	}
+	return 0
+}
+
+func (x *SchedulerInfo) GetRoomsTerminating() int64 {
+	if x != nil {
+		return x.RoomsTerminating
+	}
+	return 0
+}
+
 var File_api_v1_messages_proto protoreflect.FileDescriptor
 
 var file_api_v1_messages_proto_rawDesc = []byte{
@@ -1186,16 +1289,31 @@ var file_api_v1_messages_proto_rawDesc = []byte{
 	0x0a, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b,
 	0x32, 0x17, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62,
 	0x75, 0x66, 0x2e, 0x53, 0x74, 0x72, 0x75, 0x63, 0x74, 0x52, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64,
-	0x61, 0x74, 0x61, 0x42, 0x87, 0x01, 0x0a, 0x23, 0x63, 0x6f, 0x6d, 0x2e, 0x74, 0x6f, 0x70, 0x66,
-	0x72, 0x65, 0x65, 0x67, 0x61, 0x6d, 0x65, 0x73, 0x2e, 0x6d, 0x61, 0x65, 0x73, 0x74, 0x72, 0x6f,
-	0x2e, 0x70, 0x6b, 0x67, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x5a, 0x2a, 0x67, 0x69, 0x74,
-	0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x6f, 0x70, 0x66, 0x72, 0x65, 0x65, 0x67,
-	0x61, 0x6d, 0x65, 0x73, 0x2f, 0x6d, 0x61, 0x65, 0x73, 0x74, 0x72, 0x6f, 0x2f, 0x70, 0x6b, 0x67,
-	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x92, 0x41, 0x33, 0x12, 0x09, 0x0a, 0x07, 0x4d, 0x61,
-	0x65, 0x73, 0x74, 0x72, 0x6f, 0x2a, 0x02, 0x01, 0x02, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69,
-	0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x10, 0x61, 0x70, 0x70,
-	0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x62, 0x06, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x61, 0x74, 0x61, 0x22, 0xe9, 0x01, 0x0a, 0x0d, 0x53, 0x63, 0x68, 0x65, 0x64, 0x75, 0x6c, 0x65,
+	0x72, 0x49, 0x6e, 0x66, 0x6f, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x67, 0x61, 0x6d,
+	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x67, 0x61, 0x6d, 0x65, 0x12, 0x14, 0x0a,
+	0x05, 0x73, 0x74, 0x61, 0x74, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x73, 0x74,
+	0x61, 0x74, 0x65, 0x12, 0x1f, 0x0a, 0x0b, 0x72, 0x6f, 0x6f, 0x6d, 0x73, 0x5f, 0x72, 0x65, 0x61,
+	0x64, 0x79, 0x18, 0x04, 0x20, 0x01, 0x28, 0x03, 0x52, 0x0a, 0x72, 0x6f, 0x6f, 0x6d, 0x73, 0x52,
+	0x65, 0x61, 0x64, 0x79, 0x12, 0x25, 0x0a, 0x0e, 0x72, 0x6f, 0x6f, 0x6d, 0x73, 0x5f, 0x6f, 0x63,
+	0x63, 0x75, 0x70, 0x69, 0x65, 0x64, 0x18, 0x05, 0x20, 0x01, 0x28, 0x03, 0x52, 0x0d, 0x72, 0x6f,
+	0x6f, 0x6d, 0x73, 0x4f, 0x63, 0x63, 0x75, 0x70, 0x69, 0x65, 0x64, 0x12, 0x25, 0x0a, 0x0e, 0x72,
+	0x6f, 0x6f, 0x6d, 0x73, 0x5f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x69, 0x6e, 0x67, 0x18, 0x06, 0x20,
+	0x01, 0x28, 0x03, 0x52, 0x0d, 0x72, 0x6f, 0x6f, 0x6d, 0x73, 0x43, 0x72, 0x65, 0x61, 0x74, 0x69,
+	0x6e, 0x67, 0x12, 0x2b, 0x0a, 0x11, 0x72, 0x6f, 0x6f, 0x6d, 0x73, 0x5f, 0x74, 0x65, 0x72, 0x6d,
+	0x69, 0x6e, 0x61, 0x74, 0x69, 0x6e, 0x67, 0x18, 0x07, 0x20, 0x01, 0x28, 0x03, 0x52, 0x10, 0x72,
+	0x6f, 0x6f, 0x6d, 0x73, 0x54, 0x65, 0x72, 0x6d, 0x69, 0x6e, 0x61, 0x74, 0x69, 0x6e, 0x67, 0x42,
+	0x87, 0x01, 0x0a, 0x23, 0x63, 0x6f, 0x6d, 0x2e, 0x74, 0x6f, 0x70, 0x66, 0x72, 0x65, 0x65, 0x67,
+	0x61, 0x6d, 0x65, 0x73, 0x2e, 0x6d, 0x61, 0x65, 0x73, 0x74, 0x72, 0x6f, 0x2e, 0x70, 0x6b, 0x67,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x5a, 0x2a, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
+	0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x6f, 0x70, 0x66, 0x72, 0x65, 0x65, 0x67, 0x61, 0x6d, 0x65, 0x73,
+	0x2f, 0x6d, 0x61, 0x65, 0x73, 0x74, 0x72, 0x6f, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x76, 0x31, 0x92, 0x41, 0x33, 0x12, 0x09, 0x0a, 0x07, 0x4d, 0x61, 0x65, 0x73, 0x74, 0x72,
+	0x6f, 0x2a, 0x02, 0x01, 0x02, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61,
+	0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x33,
 }
 
 var (
@@ -1210,7 +1328,7 @@ func file_api_v1_messages_proto_rawDescGZIP() []byte {
 	return file_api_v1_messages_proto_rawDescData
 }
 
-var file_api_v1_messages_proto_msgTypes = make([]protoimpl.MessageInfo, 13)
+var file_api_v1_messages_proto_msgTypes = make([]protoimpl.MessageInfo, 14)
 var file_api_v1_messages_proto_goTypes = []interface{}{
 	(*Container)(nil),            // 0: api.v1.Container
 	(*ContainerEnvironment)(nil), // 1: api.v1.ContainerEnvironment
@@ -1225,8 +1343,9 @@ var file_api_v1_messages_proto_goTypes = []interface{}{
 	(*SchedulerVersion)(nil),     // 10: api.v1.SchedulerVersion
 	(*Forwarder)(nil),            // 11: api.v1.Forwarder
 	(*ForwarderOptions)(nil),     // 12: api.v1.ForwarderOptions
-	(*timestamp.Timestamp)(nil),  // 13: google.protobuf.Timestamp
-	(*_struct.Struct)(nil),       // 14: google.protobuf.Struct
+	(*SchedulerInfo)(nil),        // 13: api.v1.SchedulerInfo
+	(*timestamp.Timestamp)(nil),  // 14: google.protobuf.Timestamp
+	(*_struct.Struct)(nil),       // 15: google.protobuf.Struct
 }
 var file_api_v1_messages_proto_depIdxs = []int32{
 	1,  // 0: api.v1.Container.environment:type_name -> api.v1.ContainerEnvironment
@@ -1235,16 +1354,16 @@ var file_api_v1_messages_proto_depIdxs = []int32{
 	3,  // 3: api.v1.Container.ports:type_name -> api.v1.ContainerPort
 	0,  // 4: api.v1.Spec.containers:type_name -> api.v1.Container
 	4,  // 5: api.v1.Scheduler.port_range:type_name -> api.v1.PortRange
-	13, // 6: api.v1.Scheduler.created_at:type_name -> google.protobuf.Timestamp
+	14, // 6: api.v1.Scheduler.created_at:type_name -> google.protobuf.Timestamp
 	5,  // 7: api.v1.Scheduler.spec:type_name -> api.v1.Spec
 	11, // 8: api.v1.Scheduler.forwarders:type_name -> api.v1.Forwarder
 	4,  // 9: api.v1.SchedulerWithoutSpec.port_range:type_name -> api.v1.PortRange
-	13, // 10: api.v1.SchedulerWithoutSpec.created_at:type_name -> google.protobuf.Timestamp
+	14, // 10: api.v1.SchedulerWithoutSpec.created_at:type_name -> google.protobuf.Timestamp
 	9,  // 11: api.v1.Operation.lease:type_name -> api.v1.Lease
-	13, // 12: api.v1.Operation.created_at:type_name -> google.protobuf.Timestamp
-	13, // 13: api.v1.SchedulerVersion.created_at:type_name -> google.protobuf.Timestamp
+	14, // 12: api.v1.Operation.created_at:type_name -> google.protobuf.Timestamp
+	14, // 13: api.v1.SchedulerVersion.created_at:type_name -> google.protobuf.Timestamp
 	12, // 14: api.v1.Forwarder.options:type_name -> api.v1.ForwarderOptions
-	14, // 15: api.v1.ForwarderOptions.metadata:type_name -> google.protobuf.Struct
+	15, // 15: api.v1.ForwarderOptions.metadata:type_name -> google.protobuf.Struct
 	16, // [16:16] is the sub-list for method output_type
 	16, // [16:16] is the sub-list for method input_type
 	16, // [16:16] is the sub-list for extension type_name
@@ -1414,6 +1533,18 @@ func file_api_v1_messages_proto_init() {
 				return nil
 			}
 		}
+		file_api_v1_messages_proto_msgTypes[13].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SchedulerInfo); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	file_api_v1_messages_proto_msgTypes[8].OneofWrappers = []interface{}{}
 	file_api_v1_messages_proto_msgTypes[11].OneofWrappers = []interface{}{}
@@ -1423,7 +1554,7 @@ func file_api_v1_messages_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_v1_messages_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   13,
+			NumMessages:   14,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
