# pkg/api/v1/schedulers.pb.gw.go
@@ -495,6 +495,42 @@ func local_request_SchedulersService_SwitchActiveVersion_0(ctx context.Context, 
 
 }
 
+var (
+	filter_SchedulersService_ListSchedulersInfo_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_SchedulersService_ListSchedulersInfo_0(ctx context.Context, marshaler runtime.Marshaler, client SchedulersServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListSchedulersInfoRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_SchedulersService_ListSchedulersInfo_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.ListSchedulersInfo(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_SchedulersService_ListSchedulersInfo_0(ctx context.Context, marshaler runtime.Marshaler, server SchedulersServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListSchedulersInfoRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_SchedulersService_ListSchedulersInfo_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.ListSchedulersInfo(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterSchedulersServiceHandlerServer registers the http handlers for service SchedulersService to "mux".
 // UnaryRPC     :call SchedulersServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -682,6 +718,29 @@ func RegisterSchedulersServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		}
 
 		forward_SchedulersService_SwitchActiveVersion_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_SchedulersService_ListSchedulersInfo_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.v1.SchedulersService/ListSchedulersInfo", runtime.WithHTTPPathPattern("/schedulers/info"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SchedulersService_ListSchedulersInfo_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SchedulersService_ListSchedulersInfo_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -886,6 +945,26 @@ func RegisterSchedulersServiceHandlerClient(ctx context.Context, mux *runtime.Se
 
 	})
 
+	mux.Handle("GET", pattern_SchedulersService_ListSchedulersInfo_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/api.v1.SchedulersService/ListSchedulersInfo", runtime.WithHTTPPathPattern("/schedulers/info"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SchedulersService_ListSchedulersInfo_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SchedulersService_ListSchedulersInfo_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -905,6 +984,8 @@ var (
 	pattern_SchedulersService_GetSchedulerVersions_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"schedulers", "scheduler_name", "versions"}, ""))
 
 	pattern_SchedulersService_SwitchActiveVersion_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"schedulers", "scheduler_name"}, ""))
+
+	pattern_SchedulersService_ListSchedulersInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"schedulers", "info"}, ""))
 )
 
 var (
@@ -923,4 +1004,6 @@ var (
 	forward_SchedulersService_GetSchedulerVersions_0 = runtime.ForwardResponseMessage
 
 	forward_SchedulersService_SwitchActiveVersion_0 = runtime.ForwardResponseMessage
+
+	forward_SchedulersService_ListSchedulersInfo_0 = runtime.ForwardResponseMessage
 )
