# pkg/api/v1/schedulers_grpc.pb.go
@@ -34,6 +34,8 @@ type SchedulersServiceClient interface {
 	GetSchedulerVersions(ctx context.Context, in *GetSchedulerVersionsRequest, opts ...grpc.CallOption) (*GetSchedulerVersionsResponse, error)
 	// Switch Active Version to Scheduler
 	SwitchActiveVersion(ctx context.Context, in *SwitchActiveVersionRequest, opts ...grpc.CallOption) (*SwitchActiveVersionResponse, error)
+	// List Scheduler and Game Rooms info by Game
+	ListSchedulersInfo(ctx context.Context, in *ListSchedulersInfoRequest, opts ...grpc.CallOption) (*ListSchedulersInfoResponse, error)
 }
 
 type schedulersServiceClient struct {
@@ -116,6 +118,15 @@ func (c *schedulersServiceClient) SwitchActiveVersion(ctx context.Context, in *S
 	return out, nil
 }
 
+func (c *schedulersServiceClient) ListSchedulersInfo(ctx context.Context, in *ListSchedulersInfoRequest, opts ...grpc.CallOption) (*ListSchedulersInfoResponse, error) {
+	out := new(ListSchedulersInfoResponse)
+	err := c.cc.Invoke(ctx, "/api.v1.SchedulersService/ListSchedulersInfo", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // SchedulersServiceServer is the server API for SchedulersService service.
 // All implementations must embed UnimplementedSchedulersServiceServer
 // for forward compatibility
@@ -136,6 +147,8 @@ type SchedulersServiceServer interface {
 	GetSchedulerVersions(context.Context, *GetSchedulerVersionsRequest) (*GetSchedulerVersionsResponse, error)
 	// Switch Active Version to Scheduler
 	SwitchActiveVersion(context.Context, *SwitchActiveVersionRequest) (*SwitchActiveVersionResponse, error)
+	// List Scheduler and Game Rooms info by Game
+	ListSchedulersInfo(context.Context, *ListSchedulersInfoRequest) (*ListSchedulersInfoResponse, error)
 	mustEmbedUnimplementedSchedulersServiceServer()
 }
 
@@ -166,6 +179,9 @@ func (UnimplementedSchedulersServiceServer) GetSchedulerVersions(context.Context
 }
 func (UnimplementedSchedulersServiceServer) SwitchActiveVersion(context.Context, *SwitchActiveVersionRequest) (*SwitchActiveVersionResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SwitchActiveVersion not implemented")
+}
+func (UnimplementedSchedulersServiceServer) ListSchedulersInfo(context.Context, *ListSchedulersInfoRequest) (*ListSchedulersInfoResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListSchedulersInfo not implemented")
 }
 func (UnimplementedSchedulersServiceServer) mustEmbedUnimplementedSchedulersServiceServer() {}
 
@@ -324,6 +340,24 @@ func _SchedulersService_SwitchActiveVersion_Handler(srv interface{}, ctx context
 	return interceptor(ctx, in, info, handler)
 }
 
+func _SchedulersService_ListSchedulersInfo_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListSchedulersInfoRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SchedulersServiceServer).ListSchedulersInfo(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.v1.SchedulersService/ListSchedulersInfo",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SchedulersServiceServer).ListSchedulersInfo(ctx, req.(*ListSchedulersInfoRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // SchedulersService_ServiceDesc is the grpc.ServiceDesc for SchedulersService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -362,6 +396,10 @@ var SchedulersService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "SwitchActiveVersion",
 			Handler:    _SchedulersService_SwitchActiveVersion_Handler,
+		},
+		{
+			MethodName: "ListSchedulersInfo",
+			Handler:    _SchedulersService_ListSchedulersInfo_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
