# proto/apidocs.swagger.json
@@ -381,6 +381,38 @@
         ]
       }
     },
+    "/schedulers/info": {
+      "get": {
+        "summary": "List Scheduler and Game Rooms info by Game",
+        "operationId": "SchedulersService_ListSchedulersInfo",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ListSchedulersInfoResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "game",
+            "description": "Game name to filter schedulers.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "SchedulersService"
+        ]
+      }
+    },
     "/schedulers/{name=*}": {
       "post": {
         "summary": "Creates new scheduler version and switch it to active version.",
@@ -1139,6 +1171,19 @@
       },
       "title": "The list operation route response/reply\nThere's a list for each operation major status"
     },
+    "v1ListSchedulersInfoResponse": {
+      "type": "object",
+      "properties": {
+        "schedulers": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1SchedulerInfo"
+          },
+          "description": "List of schedulers fetched."
+        }
+      },
+      "title": "List Scheduler and Game Rooms Info Response"
+    },
     "v1ListSchedulersResponse": {
       "type": "object",
       "properties": {
@@ -1233,6 +1278,44 @@
         }
       },
       "description": "Scheduler definition."
+    },
+    "v1SchedulerInfo": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "title": "Name"
+        },
+        "game": {
+          "type": "string",
+          "title": "Game"
+        },
+        "state": {
+          "type": "string",
+          "title": "State"
+        },
+        "roomsReady": {
+          "type": "string",
+          "format": "int64",
+          "title": "Rooms ready"
+        },
+        "roomsOccupied": {
+          "type": "string",
+          "format": "int64",
+          "title": "Rooms Occupied"
+        },
+        "roomsCreating": {
+          "type": "string",
+          "format": "int64",
+          "title": "Rooms Creating"
+        },
+        "roomsTerminating": {
+          "type": "string",
+          "format": "int64",
+          "title": "Rooms Terminating"
+        }
+      },
+      "title": "Scheduler Info"
     },
     "v1SchedulerVersion": {
       "type": "object",
